assets/main.css
*, html, body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
  font-family: "Ubuntu", "Helvetica Neue", "Helvetica", "Arial", "Heiti SC", "WenQuanYi Micro Hei", "Microsoft YaHei", "Droid Sans Fallback", sans-serif;
}

.btn-group {
  display: flex;
}
.panel {
  margin-bottom: 12px;
}
.panel .panel-title {
  font-size: inherit;
}
.panel .container {
  width: 100%;
  padding: 0;
}
.panel .row {
  margin: 0;
}
.panel .col {
  padding: 0;
}
.progress {
  border-radius: 0px;
}
.progress-bar {
  transition: none;
}
.progress-bar > span {
  position: absolute;
  width: 100%;
  display: block;
}

.poi-ship-cond-0 {  /* cond 0~19  */
  color: #DD514C;
  font-weight: bold;
}
.poi-ship-cond-20 { /* cond 20~29 */
  color: #F37B1D;
}
.poi-ship-cond-30 { /* cond 30~49 */
  color: #FFC880;
}
.poi-ship-cond-50 { /* cond 50~100 */
  color: #FFFF40;
}
img.png {
  height: 16px;
  margin-top: -4px;
}
img.svg {
  height: 16px;
  margin-top: -4px;
}

#main {
  padding: 10px;
}
#detail-area .row {
  width: 100%;
  height: 30px;
  display: flex;
}
#detail-area .panel .row > span {
  height: 20px;
  margin: 2px;
  text-align: center;
}

/* HP Bar */
.hp-bar.progress {
  margin: 0;
  height: 22px;
  position: relative;
  background-color: #1F1F1F;
  /* background-color: rgba(0, 0, 0, 0.2); */
}
.hp-bar.progress-bar {
  font-size: 100%;
  line-height: 22px;
}
.hp-bar.lost.progress-bar {
  background-color: rgba(255, 255, 255, 0.1);
}
.hp-bar img {
  margin-left: -4px;
  margin-right: -4px;
}

/* Option Area */
#option-area .tip {
  font-size: 80%;
}

/* Fleet View */
.fleet-title {
  font-size: 110%;
}
.fleet-view .col-xs-1,
.fleet-view .col-xs-2,
.fleet-view .col-xs-3,
.fleet-view .col-xs-4,
.fleet-view .col-xs-5,
.fleet-view .col-xs-6,
.fleet-view .col-xs-7,
.fleet-view .col-xs-8,
.fleet-view .col-xs-9,
.fleet-view .col-xs-10,
.fleet-view .col-xs-11,
.fleet-view .col-xs-12 {
  padding: 0;
}
/* Ship View */
.ship-view.container {
  padding: 10px;
}
.ship-view .row {
  height: 22px;
}
.ship-view .ship-name {
  font-size: 110%;
}
.ship-view .ship-info,
.ship-view .ship-fa {
  font-size: 90%;
  opacity: 0.8;
}
/* LBAC View */
.lbac-view.container {
  padding: 10px;
}
.lbac-view .row {
  height: 22px;
}
/* Item View */
.item-view {
  overflow: hidden;
  display: flex;
}
.item-view.row {
  height: 22px;
}
.item-view .item-info {
  position: relative;
  flex: 1;
}
.item-view .item-attr {
  display: table;
  width: 40px;
}
.item-view .level {
  display: inline-block;
  width: 28px;
  color: #45A9A5;
  font-weight: bold;
}
.item-view .alv {
  display: inline-block;
  width: 12px;
}
.item-view .alv img {
  height: 16px;
}
.item-view .item-icon img.png {
  height: 26px;
}
.item-view .item-icon img.svg {
  height: 18px;
}
.item-view .number {
  background-color: rgba(33, 33, 33, 0.701961);
  position: absolute;
  border-radius: 9px;
  text-align: center;
  font-size: 80%;
  bottom: 0;
  left: 0;
  height: 16px;
  width: 16px;
}

/* Stage Table */
.stage-title {
  font-size: 110%;
  margin: 0 0 8px;
}
.stage-table hr {
  margin: 7px 0 7px;
}
/* Engagement Table */
.engagement-row > span {
  flex: 1;
}
/* Aerial Table */
.aerial-row .anti-air-tooltip div {
  display: block;
  width: 100%;
}
.aerial-row > span:nth-child(1),
.aerial-row > span:nth-child(5) {
  flex: 6;
}
.aerial-row > span:nth-child(2),
.aerial-row > span:nth-child(3),
.aerial-row > span:nth-child(4) {
  flex: 7;
}
/* Attack Info */
.critical {
  color: #FFFF00;
}
.position-indicator {
  font-size: 80%;
}
.attack-row > span:nth-child(1),
.attack-row > span:nth-child(4),
.attack-row > span:nth-child(7) {
  flex: 6;
}
.attack-row > span:nth-child(2),
.attack-row > span:nth-child(6) {
  flex: 7;
}
.attack-row > span:nth-child(3),
.attack-row > span:nth-child(5) {
  flex: 1;
}

